apps/registry/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: registry
  name: registry
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.org/client-max-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
    - host: registry.lumpiasty.xyz
      http:
        paths:
          - backend:
              service:
                name: registry-service
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - registry.lumpiasty.xyz
      secretName: researcher-ingress
